--- a/README.me
+++ b/README.me
@@ -1,6 +1,37 @@
-# m2-projeto-pokeapi-front-end-kenzie
+
+
+# Projeto-PokeAPi
+
+## Descrição
 Existem muitos tipos de Pokémon, e o objetivo deste site é fornecer uma barra de pesquisa que permita a pesquisa de 
 Pokémon específicos. Basta inserir o nome do Pokémon na barra de pesquisa e a página será atualizada com apenas o 
 Pokémon desejado. Isso torna a pesquisa por Pokémon muito mais fácil e eficiente.
-Principais Tecnologias: Javascript, CSS, Git ,Github,Consumo de Apis
-https://kenzie-academy-brasil-developers.github.io/projeto-Poke-APi/
+
+<p align="center">
+  <img src="https://th.bing.com/th/id/R.6cfb64fd58fe9def25e74a0a18b4090f?rik=P3D6g4OlHmA74w&pid=ImgRaw&r=0" alt="PokeAPi" width="400">
+</p>
+
+---
+
+## Recursos
+
+- Pesquisar pelo nome do Pokemon e mostrar apenas o pokemon especifico
+
+---
+
+## Tecnologias Utilizadas
+
+- HTML
+- CSS
+- javaScript
+- Consumo de APIs
+---
+
+## Autor
+
+Caio Henrique - [chss.bolsa99@gmail.com](mailto:chss.bolsa99@gmail.com)
+
+---
+## Link do Site
+
+[https://kenzie-academy-brasil-developers.github.io/projeto-Poke-APi/](https://kenzie-academy-brasil-developers.github.io/projeto-Poke-APi/)
